<?xml version="1.0"?>
<package format="2">
  <name>dynamic_map</name>
  <version>0.0.1</version>
  <description>Dynamic map package (C++): static, dynamic and inflated occupancy grids</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_task_msgs</exec_depend>
  <exec_depend>common_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
  </export>
</package>
